--- a/css/achievements.css
+++ b/css/achievements.css
@@ -56,6 +56,7 @@
     var(--color-secondary) 0%, 
     var(--color-primary) 50%, 
     var(--color-secondary) 100%);
+  z-index: 1;
 }
 
 .achievement-item {
@@ -169,7 +170,7 @@
 }
 
 .tag-music {
-  color: var(--color-secondary);
+  color: var(--color-text-secondary);
 }
 
 .tag-infomation {
