--- a/css/profile.css
+++ b/css/profile.css
@@ -87,6 +87,16 @@
   font-size: 1.2rem;
   color: var(--color-secondary);
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+}
+
+.profile-social-icon svg {
+  display: block;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .profile-social-name {
